--- a/app/team/page.module.css
+++ b/app/team/page.module.css
@@ -4,19 +4,18 @@
   align-items:center;
   background: white;
   color: rgb(0, 0, 185);
-  width: 100%;
   text-align:center;
-  min-height: 6rem;
+  font-size: 2rem;
+  height:9rem;
 }
 .allCards {
   padding: 2rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  justify-content: space-around;
-  align-items: center;
   gap:10px;
+  display:flex;
+  flex-wrap:wrap;
 }
 .card {
+  flex:1;
   display: flex;
   background:white;
   color:rgb(0, 0, 185);
@@ -27,6 +26,7 @@
 }
 .socials {
   display: flex;
+  flex-grow: 1;
   flex-direction: column;
   justify-content:center;
   align-items:center;
@@ -34,6 +34,7 @@
 }
 .socials > * {
   padding: 10px;
+  flex-wrap:wrap;
 }
 .links {
   display:flex;
