--- a/app/team/page.module.css
+++ b/app/team/page.module.css
@@ -24,6 +24,37 @@
 .image {
   border-radius:25px 0px 0px 25px;
 }
+@media screen and (min-width: 0px) and (max-width: 513px){
+  .card {
+    flex-wrap:wrap;
+    min-width:40%;
+    min-height:40%;
+    max-width:50%;
+  }
+  .image {
+    border-radius: 25px 25px 0px 0px;
+    width:100%;
+    height:55%;
+  }
+  .socials {
+    font-size: .5rem;
+  }
+}
+
+@media screen and (min-width: 0px) and (max-width: 380px){
+  .card {
+    flex-wrap:wrap;
+    min-width:100%;
+  }
+  .image {
+    border-radius: 25px 25px 0px 0px;
+    width:100%;
+    height:55%;
+  }
+  .socials {
+    font-size: .3rem;
+  }
+}
 .socials {
   display: flex;
   flex-grow: 1;
@@ -34,7 +65,6 @@
 }
 .socials > * {
   padding: 10px;
-  flex-wrap:wrap;
 }
 .links {
   display:flex;
