--- a/app/team/page.module.css
+++ b/app/team/page.module.css
@@ -24,6 +24,26 @@
 .image {
   border-radius:25px 0px 0px 25px;
 }
+.socials {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content:center;
+  align-items:center;
+  overflow:scroll;
+  font-size:.8rem;
+}
+.socials > * {
+  padding: 10px;
+}
+.links {
+  display:flex;
+}
+@media screen and (min-width: 849px){
+  .card {
+    max-width:50%;
+  }
+}
 @media screen and (min-width: 0px) and (max-width: 513px){
   .card {
     flex-wrap:wrap;
@@ -37,7 +57,7 @@
     height:55%;
   }
   .socials {
-    font-size: .5rem;
+    font-size: .4rem;
   }
 }
 
@@ -51,21 +71,4 @@
     width:100%;
     height:55%;
   }
-  .socials {
-    font-size: .3rem;
-  }
-}
-.socials {
-  display: flex;
-  flex-grow: 1;
-  flex-direction: column;
-  justify-content:center;
-  align-items:center;
-  margin-left:10px;
-}
-.socials > * {
-  padding: 10px;
-}
-.links {
-  display:flex;
 }
