--- a/app/page.module.css
+++ b/app/page.module.css
@@ -12,6 +12,7 @@
 
 .card {
   flex: 1;
+  align-items:center; 
   padding: 1rem 1.2rem;
   border-radius: var(--border-radius);
   background: rgba(var(--card-rgb), 0);
